# Withered-Soundboard

./: LICENSE  README.md  package.json
src/: Sounds.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  sound.rs  sound_system.rs
src/assets/css/: global.css  window.css
src/assets/js/: popup.js
