[package]
name = "withered-soundboard"
version = "1.0.0"
description = "Withered Soundboard, written in Rust with Tauri + React."
authors = ["Withered Group", "foxlldev"]
license = "MIT License"
repository = "https://github.com/withered-group/Withered-Soundboard"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-open", "fs-all", "notification-all", "path-all", "protocol-all", "shell-open", "system-tray", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = "0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
